# hass-tailscale

./: LICENSE.md  README.md  pyproject.toml  repository.json
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  renovate.json
.github/workflows/: addon-ci.yaml  addon-deploy.yaml  ci.yaml  deploy.yaml  labels-reusable.yaml  labels.yaml  lock-reusable.yaml  lock.yaml  pr-labels-reusable.yaml  pr-labels.yaml  release-drafter-reusable.yaml  release-drafter.yaml  release.yaml  stale-reusable.yaml  stale.yaml  upstream-ci.yaml  upstream-deploy.yaml
.github/workflows/upstream/: addon-ci.yaml  addon-deploy.yaml
scripts/: addon_info.py
tailscale/: .README.j2  DOCS.md  Dockerfile  apparmor.txt  build.yaml  config.yaml
tailscale/rootfs/etc/s6-overlay/s6-rc.d/forwarding/: run
tailscale/rootfs/etc/s6-overlay/s6-rc.d/init-nginx/: run
tailscale/rootfs/etc/s6-overlay/s6-rc.d/post-tailscaled/: run
tailscale/rootfs/etc/s6-overlay/s6-rc.d/share-homeassistant/: run
tailscale/rootfs/etc/s6-overlay/s6-rc.d/tailscaled/: run
tailscale/rootfs/etc/s6-overlay/scripts/: stage2_hook.sh
tailscale/translations/: en.yaml
tests/: test_addon_info.py  test_share_homeassistant.py
tests/fixtures/: bashio.sh  bashio_env.sh  curl  tailscale_stub.sh
