[project]
name = "hass-tailscale-tests"
version = "0.0.0"
description = "Test dependencies for hass-tailscale"
requires-python = ">=3.12"
dependencies = [
  "pyyaml==6.0.3",
  "pytest==9.1.1",
  "ruff==0.15.21",
  "yamllint==1.38.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E4", "E7", "E9", "F", "I", "PERF", "RUF", "SIM", "UP"]

